feat: add bookmarklet

--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -9,3 +9,18 @@
 	height: auto;
 	width: 300px;
 }
+
+.rmt { margin-top: 30px }
+
+.cta__upload {
+	display: 'block';
+	width: '100%';
+	height: '100%'
+}
+
+.cta__upload span {
+	color: #fff;
+	padding: 0 1em
+}
+
+.cta__upload svg { vertical-align: middle }
